Updated project structure, added new folders and files

--- a/notebooks/02_rag_qdrant.ipynb
+++ b/notebooks/02_rag_qdrant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cd10bf4d",
    "metadata": {},
    "outputs": [
@@ -355,28 +355,70 @@
     "\"\"\"\n",
     "This function searches the knowledge base for similar questions\n",
     "\"\"\"\n",
+    "# def search_knowledge_base(query, top_k=3, score_threshold=0.5):\n",
+    "#     \"\"\"\n",
+    "#     Search for similar questions in the knowledge base\n",
+    "\n",
+    "#     Args:\n",
+    "#         query: User's math question\n",
+    "#         top_k: Number of results to return\n",
+    "#         score_threshold: Minimum similarity score (0-1)\n",
+    "\n",
+    "#     Returns:\n",
+    "#         List of matching problems with scores\n",
+    "#     \"\"\"\n",
+    "#     # Create embedding for query\n",
+    "#     query_embedding = embedding_model.encode(query)\n",
+    "\n",
+    "#     # Search Qdrant\n",
+    "#     search_results = client.search(\n",
+    "#         collection_name=COLLECTION_NAME,\n",
+    "#         query_vector=query_embedding.tolist(),\n",
+    "#         limit=top_k\n",
+    "#     )\n",
+    "\n",
+    "#     # Filter by score threshold\n",
+    "#     filtered_results = []\n",
+    "#     for result in search_results:\n",
+    "#         if result.score >= score_threshold:\n",
+    "#             filtered_results.append({\n",
+    "#                 'score': result.score,\n",
+    "#                 'question': result.payload['question'],\n",
+    "#                 'solution': result.payload['solution'],\n",
+    "#                 'answer': result.payload['answer'],\n",
+    "#                 'topic': result.payload['topic'],\n",
+    "#                 'difficulty': result.payload['difficulty']\n",
+    "#             })\n",
+    "\n",
+    "#     return filtered_results\n",
+    "\n",
+    "# print(\"✅ Search function created\")\n",
+    "\n",
+    "# Replace the search_knowledge_base function in notebook 02 with:\n",
+    "\n",
     "def search_knowledge_base(query, top_k=3, score_threshold=0.5):\n",
     "    \"\"\"\n",
     "    Search for similar questions in the knowledge base\n",
-    "\n",
+    "    \n",
     "    Args:\n",
     "        query: User's math question\n",
     "        top_k: Number of results to return\n",
     "        score_threshold: Minimum similarity score (0-1)\n",
-    "\n",
+    "        \n",
     "    Returns:\n",
     "        List of matching problems with scores\n",
     "    \"\"\"\n",
     "    # Create embedding for query\n",
     "    query_embedding = embedding_model.encode(query)\n",
-    "\n",
-    "    # Search Qdrant\n",
-    "    search_results = client.search(\n",
+    "    \n",
+    "    # Use query_points instead of deprecated search\n",
+    "    search_results = client.query_points(\n",
     "        collection_name=COLLECTION_NAME,\n",
-    "        query_vector=query_embedding.tolist(),\n",
-    "        limit=top_k\n",
-    "    )\n",
-    "\n",
+    "        query=query_embedding.tolist(),\n",
+    "        limit=top_k,\n",
+    "        with_payload=True\n",
+    "    ).points\n",
+    "    \n",
     "    # Filter by score threshold\n",
     "    filtered_results = []\n",
     "    for result in search_results:\n",
@@ -389,11 +431,9 @@
     "                'topic': result.payload['topic'],\n",
     "                'difficulty': result.payload['difficulty']\n",
     "            })\n",
-    "\n",
+    "    \n",
     "    return filtered_results\n",
-    "\n",
     "print(\"✅ Search function created\")\n",
-    "\n",
     "# ============================================================\n",
     "# STEP 9: Test the Search System\n",
     "# ============================================================\n",
